--- a/javascript/package.json
+++ b/javascript/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/cucumber/cucumber",
   "devDependencies": {
-    "@cucumber/gherkin": "^15.0.0",
+    "@cucumber/gherkin": "file:../../gherkin/javascript",
     "@types/mocha": "^8.0.1",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
@@ -45,7 +45,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "@cucumber/messages": "^13.0.1"
+    "@cucumber/messages": "file:../../messages/javascript"
   },
   "directories": {
     "test": "test"
