--- a/javascript/package.json
+++ b/javascript/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/cucumber/cucumber",
   "devDependencies": {
     "@cucumber/gherkin": "file:../../gherkin/javascript",
+    "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.1",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
@@ -37,6 +38,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.5",
+    "glob": "^7.1.6",
     "json-schema": "^0.2.5",
     "mocha": "^8.1.1",
     "nyc": "^15.1.0",
