--- a/javascript/package.json
+++ b/javascript/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/cucumber/cucumber",
   "devDependencies": {
-    "@cucumber/gherkin": "^15.0.2",
+    "@cucumber/gherkin": "file:../../gherkin/javascript",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.6.2",
@@ -47,7 +47,7 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "@cucumber/messages": "^13.0.1"
+    "@cucumber/messages": "file:../../messages/javascript"
   },
   "directories": {
     "test": "test"
