--- a/javascript/package.json
+++ b/javascript/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
+    "core-js": "^3.6.5",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-node": "^11.1.0",
@@ -46,7 +47,8 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@cucumber/messages": "file:../../messages/javascript"
+    "@cucumber/messages": "file:../../messages/javascript",
+    "@teppeis/multimaps": "^1.1.0"
   },
   "directories": {
     "test": "test"
