--- a/javascript/package.json
+++ b/javascript/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/cucumber/cucumber",
   "devDependencies": {
-    "@cucumber/gherkin": "^16.0.0",
+    "@cucumber/gherkin": "file:../../gherkin/javascript",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.13",
@@ -47,7 +47,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@cucumber/messages": "^13.2.1",
+    "@cucumber/messages": "file:../../messages/javascript",
     "@teppeis/multimaps": "^1.1.0"
   },
   "directories": {
