--- a/javascript/package.json
+++ b/javascript/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/cucumber/cucumber",
   "devDependencies": {
-    "@cucumber/gherkin": "file:../../gherkin/javascript",
+    "@cucumber/gherkin": "17.0.2",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.25",
@@ -48,7 +48,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@cucumber/messages": "file:../../messages/javascript",
+    "@cucumber/messages": "14.0.1",
     "@teppeis/multimaps": "^2.0.0"
   },
   "directories": {
