--- a/javascript/package.json
+++ b/javascript/package.json
@@ -28,6 +28,8 @@
   "homepage": "https://github.com/cucumber/cucumber",
   "devDependencies": {
     "@cucumber/gherkin": "^17.0.2",
+    "@cucumber/gherkin-streams": "^1.0.0",
+    "@cucumber/message-streams": "^1.0.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.31",
