Fix the release process for javascript modules
The build of javascript modules has to be done from the root folder of
the mono-repo. So `default.mk` has been updated to do that.

`package.json` have also been updated. `prepublishOnly` has been kept
and fixed as kinda last validation before publish.

`html-formatter` `prepublishOnly` script does not execute webpack
anymore as this is now done using `make` thanks to the Makefile.

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -7,7 +7,7 @@
   "bin": {},
   "scripts": {
     "test": "mocha",
-    "prepublishOnly": "tsc"
+    "prepublishOnly": "tsc --build tsconfig.build.json"
   },
   "repository": {
     "type": "git",
