--- a/javascript/package.json
+++ b/javascript/package.json
@@ -29,7 +29,7 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.0.1",
     "glob": "^7.1.6",
-    "mocha": "^8.3.2",
+    "mocha": "8.3.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
