--- a/javascript/package.json
+++ b/javascript/package.json
@@ -22,20 +22,20 @@
   },
   "homepage": "https://github.com/cucumber/cucumber",
   "devDependencies": {
-    "@cucumber/gherkin": "^18.1.1",
-    "@cucumber/gherkin-streams": "^1.0.0",
-    "@cucumber/message-streams": "^1.0.0",
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.0.1",
-    "glob": "^7.1.6",
+    "@cucumber/gherkin": "18.1.1",
+    "@cucumber/gherkin-streams": "1.0.0",
+    "@cucumber/message-streams": "1.0.0",
+    "@types/glob": "7.1.3",
+    "@types/mocha": "8.2.2",
+    "@types/node": "15.0.1",
+    "glob": "7.1.6",
     "mocha": "8.3.2",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "ts-node": "9.1.1",
+    "typescript": "4.2.4"
   },
   "dependencies": {
-    "@cucumber/messages": "^15.0.0",
-    "@teppeis/multimaps": "^2.0.0"
+    "@cucumber/messages": "15.0.0",
+    "@teppeis/multimaps": "2.0.0"
   },
   "directories": {
     "test": "test"
