Clean up tsconfig for build

--- a/javascript/tsconfig.build.json
+++ b/javascript/tsconfig.build.json
@@ -1,12 +1,15 @@
 {
-  "extends": "../../tsconfig.build.json",
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "dist"
+    "outDir": "dist",
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "inlineSources": true,
+    "target": "es6",
+    "module": "commonjs"
   },
-  "include": [
-    "src",
-    "test",
-    "package.json"
-  ]
+  "include": ["src", "test", "package.json"]
 }
