--- a/javascript/tsconfig.base.json
+++ b/javascript/tsconfig.base.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "target": "es2018",
-    "lib": [
-      "es2019",
-      "dom"
-    ],
+    "lib": ["es2019", "dom"],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
