--- a/java/pom.xml
+++ b/java/pom.xml
@@ -14,7 +14,6 @@
   <name>Gherkin Utils</name>
   <description>Gherkin utils for doing things such as walking a Gherkin tree or pretty printing Gherkin files.
   </description>
-  <url>https://github.com/cucumber/common</url>
 
   <properties>
     <project.Automatic-Module-Name>io.cucumber.gherkin.utils</project.Automatic-Module-Name>
@@ -24,9 +23,9 @@
   </properties>
 
   <scm>
-    <connection>scm:git:git://github.com/cucumber/common.git</connection>
-    <developerConnection>scm:git:git@github.com:cucumber/common.git</developerConnection>
-    <url>git://github.com/cucumber/common.git</url>
+    <connection>scm:git:git://github.com/cucumber/gherkin-utils.git</connection>
+    <developerConnection>scm:git:git@github.com:cucumber/gherkin-utils.git</developerConnection>
+    <url>git://github.com/cucumber/gherkin-utils.git</url>
     <tag>HEAD</tag>
   </scm>
 
