--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>gherkin-utils</artifactId>
-  <version>8.0.6-SNAPSHOT</version>
+  <version>8.0.6</version>
   <packaging>jar</packaging>
   <name>Gherkin Utils</name>
   <description>Gherkin utils for doing things such as walking a Gherkin tree or pretty printing Gherkin files.
@@ -17,7 +17,7 @@
 
   <properties>
     <project.Automatic-Module-Name>io.cucumber.gherkin.utils</project.Automatic-Module-Name>
-    <project.build.outputTimestamp>1685714387</project.build.outputTimestamp>
+    <project.build.outputTimestamp>1708712970</project.build.outputTimestamp>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
   </properties>
@@ -26,7 +26,7 @@
     <connection>scm:git:git://github.com/cucumber/gherkin-utils.git</connection>
     <developerConnection>scm:git:git@github.com:cucumber/gherkin-utils.git</developerConnection>
     <url>git://github.com/cucumber/gherkin-utils.git</url>
-    <tag>HEAD</tag>
+    <tag>v8.0.6</tag>
   </scm>
 
   <dependencies>
