--- a/.github/workflows/test-javascript.yml
+++ b/.github/workflows/test-javascript.yml
@@ -41,3 +41,6 @@ jobs:
 
       - run: npm install-ci-test
         working-directory: javascript
+
+      - run: npm run eslint
+        working-directory: javascript
