--- a/javascript/package.json
+++ b/javascript/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/cucumber/cucumber.git"
+    "url": "git://github.com/cucumber/gherkin-utils.git"
   },
   "keywords": [
     "cucumber"
@@ -24,9 +24,9 @@
   "author": "Cucumber Limited <cukes@googlegroups.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cucumber/cucumber/issues"
+    "url": "https://github.com/cucumber/gherkin-utils/issues"
   },
-  "homepage": "https://github.com/cucumber/cucumber",
+  "homepage": "https://github.com/cucumber/gherkin-utils",
   "devDependencies": {
     "@cucumber/compatibility-kit": "^15.0.0",
     "@cucumber/gherkin-streams": "^5.0.1",
