--- a/javascript/package.json
+++ b/javascript/package.json
@@ -31,6 +31,7 @@
     "@cucumber/compatibility-kit": "^15.0.0",
     "@cucumber/gherkin-streams": "^5.0.1",
     "@cucumber/message-streams": "^4.0.1",
+    "@types/diff": "^5.0.9",
     "@types/mocha": "10.0.6",
     "@types/node": "20.12.7",
     "@typescript-eslint/eslint-plugin": "7.6.0",
@@ -60,6 +61,7 @@
     "@cucumber/messages": "^24.0.0",
     "@teppeis/multimaps": "3.0.0",
     "commander": "12.0.0",
+    "diff": "^5.2.0",
     "source-map-support": "^0.5.21"
   },
   "directories": {
