--- a/.github/workflows/test-javascript.yml
+++ b/.github/workflows/test-javascript.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-        node-version: ["16.x", "17.x", "18.x"]
+        node-version: [ "18.x"]
         include:
           # See https://github.com/cucumber/gherkin-utils/issues/2
           # - os: windows-latest
