Remove upgrade script
When using the mono repo each module had to check its own dependencies
for upgrades. We have replaced this with Renovate. So this script can be
removed.

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -11,8 +11,7 @@
     "eslint-fix": "eslint --ext ts,tsx --max-warnings 0 --fix src",
     "eslint": "eslint --ext ts,tsx --max-warnings 0 src",
     "test": "mocha",
-    "prepublishOnly": "tsc --build tsconfig.build.json",
-    "upgrade": "npm-check-updates --upgrade"
+    "prepublishOnly": "tsc --build tsconfig.build.json"
   },
   "repository": {
     "type": "git",
