--- a/.github/workflows/test-javascript.yml
+++ b/.github/workflows/test-javascript.yml
@@ -16,15 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os:
-          - ubuntu-latest
-        node-version: [ "18.x"]
-        include:
-          # See https://github.com/cucumber/gherkin-utils/issues/2
-          # - os: windows-latest
-          #   node-version: "18.x"
-          - os: macos-latest
-            node-version: "18.x"
+        os: [macos-latest, ubuntu-latest, windows-latest]
+        node-version: ["18.x", "20.x", "22.x"]
 
     steps:
       - name: set git core.autocrlf to 'input'
