--- a/.github/workflows/test-javascript.yml
+++ b/.github/workflows/test-javascript.yml
@@ -16,8 +16,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        node-version: ["18.x", "20.x", "22.x"]
+        os:
+          - ubuntu-latest
+        node-version: ['18.x', '20.x', '22.x', '23.x']
+        include:
+          - os: windows-latest
+            node-version: '22.x'
+          - os: macos-latest
+            node-version: '22.x'
 
     steps:
       - name: set git core.autocrlf to 'input'
