--- a/javascript/package.json
+++ b/javascript/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build": "tsc --build tsconfig.build.json && cp ../README.md dist",
     "clean": "rm -rf dist",
-    "eslint-fix": "eslint --ext ts,tsx --max-warnings 0 --fix src",
-    "eslint": "eslint --ext ts,tsx --max-warnings 0 src",
+    "fix": "eslint --max-warnings 0 --fix src && prettier --write src",
+    "lint": "eslint --max-warnings 0 src && prettier --check src",
     "test": "mocha",
     "prepublishOnly": "tsc --build tsconfig.build.json"
   },
@@ -30,23 +30,23 @@
     "@cucumber/compatibility-kit": "^17.0.0",
     "@cucumber/gherkin-streams": "^5.0.1",
     "@cucumber/message-streams": "^4.0.1",
+    "@eslint/compat": "^1.2.7",
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.21.0",
     "@types/mocha": "10.0.10",
     "@types/node": "22.13.5",
-    "@typescript-eslint/eslint-plugin": "8.24.1",
-    "@typescript-eslint/parser": "8.24.1",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "ajv": "8.17.1",
     "ajv-cli": "5.0.0",
-    "eslint": "8.57.1",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-n": "17.15.1",
-    "eslint-plugin-prettier": "5.2.3",
-    "eslint-plugin-react": "7.37.4",
-    "eslint-plugin-react-hooks": "5.1.0",
-    "eslint-plugin-simple-import-sort": "12.1.1",
+    "eslint": "^9.21.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.15.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "fast-glob": "3.3.3",
+    "globals": "^16.0.0",
     "mocha": "11.1.0",
-    "prettier": "3.5.2",
+    "prettier": "^3.5.2",
     "pretty-quick": "4.0.0",
     "rimraf": "^6.0.0",
     "ts-node": "10.9.2",
