--- a/.github/workflows/test-javascript.yml
+++ b/.github/workflows/test-javascript.yml
@@ -41,5 +41,5 @@ jobs:
       - run: npm install-ci-test
         working-directory: javascript
 
-      - run: npm run eslint
+      - run: npm run lint
         working-directory: javascript
