Only run ci on relevant changes

--- a/.github/workflows/test-java.yml
+++ b/.github/workflows/test-java.yml
@@ -5,9 +5,15 @@ on:
     branches:
       - main
       - renovate/**
+    paths:
+      - java/**
+      - .github/**
   pull_request:
     branches:
       - main
+    paths:
+      - java/**
+      - .github/**
   workflow_call:
 
 jobs:
