--- a/java/pom.xml
+++ b/java/pom.xml
@@ -1,46 +1,58 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-      <groupId>io.cucumber</groupId>
-      <artifactId>cucumber-parent</artifactId>
-      <version>4.3.8</version>
-  </parent>
+    <parent>
+        <groupId>io.cucumber</groupId>
+        <artifactId>cucumber-parent</artifactId>
+        <version>4.3.8</version>
+    </parent>
 
-  <artifactId>gherkin-utils</artifactId>
-  <version>10.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <name>Gherkin Utils</name>
-  <description>Gherkin utils for doing things such as walking a Gherkin tree or pretty printing Gherkin files.
-  </description>
+    <artifactId>gherkin-utils</artifactId>
+    <version>10.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>Gherkin Utils</name>
+    <description>Gherkin utils for doing things such as walking a Gherkin tree or pretty printing Gherkin files.
+    </description>
 
-  <properties>
-    <project.Automatic-Module-Name>io.cucumber.gherkin.utils</project.Automatic-Module-Name>
-    <project.build.outputTimestamp>1757696181</project.build.outputTimestamp>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
-  </properties>
+    <properties>
+        <project.Automatic-Module-Name>io.cucumber.gherkin.utils</project.Automatic-Module-Name>
+        <project.build.outputTimestamp>1757696181</project.build.outputTimestamp>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
-  <scm>
-    <connection>scm:git:git://github.com/cucumber/gherkin-utils.git</connection>
-    <developerConnection>scm:git:git@github.com:cucumber/gherkin-utils.git</developerConnection>
-    <url>git://github.com/cucumber/gherkin-utils.git</url>
-    <tag>HEAD</tag>
-  </scm>
+    <scm>
+        <connection>scm:git:git://github.com/cucumber/gherkin-utils.git</connection>
+        <developerConnection>scm:git:git@github.com:cucumber/gherkin-utils.git</developerConnection>
+        <url>git://github.com/cucumber/gherkin-utils.git</url>
+        <tag>HEAD</tag>
+    </scm>
 
-  <dependencies>
-    <dependency>
-      <groupId>io.cucumber</groupId>
-      <artifactId>gherkin</artifactId>
-      <version>[24.1.0,36.0.0)</version>
-    </dependency>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>5.14.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.14.0</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>gherkin</artifactId>
+            <version>[24.1.0,36.0.0)</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
