--- a/.github/workflows/test-java.yml
+++ b/.github/workflows/test-java.yml
@@ -20,11 +20,11 @@ jobs:
   test-java:
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-latest
-        java: ["17", "21"]
+        java: ['17', '21']
         include:
           - os: windows-latest
             java: "17"
@@ -36,9 +36,9 @@ jobs:
 
       - uses: actions/setup-java@v5
         with:
-          distribution: "temurin"
+          distribution: 'temurin'
           java-version: ${{ matrix.java }}
-          cache: "maven"
+          cache: 'maven'
 
       - run: mvn install
         working-directory: java
