--- a/java/pom.xml
+++ b/java/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-parent</artifactId>
-        <version>4.6.0</version>
+        <version>5.0.0</version>
     </parent>
 
     <artifactId>gherkin-utils</artifactId>
@@ -17,10 +17,7 @@
     </description>
 
     <properties>
-        <project.Automatic-Module-Name>io.cucumber.gherkin.utils</project.Automatic-Module-Name>
         <project.build.outputTimestamp>1757696181</project.build.outputTimestamp>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <scm>
@@ -46,7 +43,7 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>gherkin</artifactId>
-            <version>[24.1.0,38.0.0)</version>
+            <version>[38.0.0,39.0.0)</version>
         </dependency>
 
         <dependency>
@@ -55,4 +52,22 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
