--- a/java/pom.xml
+++ b/java/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <project.build.outputTimestamp>1757696181</project.build.outputTimestamp>
+        <osgi.bundle-symbolic-name>io.cucumber.gherkin.utils</osgi.bundle-symbolic-name>
     </properties>
 
     <scm>
@@ -82,6 +83,19 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>biz.aQute.bnd</groupId>
+                <artifactId>bnd-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
