--- a/javascript/package.json
+++ b/javascript/package.json
@@ -30,13 +30,11 @@
     "@cucumber/compatibility-kit": "^29.0.0",
     "@cucumber/gherkin-streams": "^6.0.0",
     "@cucumber/message-streams": "^4.0.1",
-    "@eslint/compat": "^2.0.0",
-    "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^10.0.0",
     "@types/mocha": "10.0.10",
     "@types/node": "22.19.11",
-    "@typescript-eslint/eslint-plugin": "^8.43.0",
-    "@typescript-eslint/parser": "^8.43.0",
+    "@typescript-eslint/eslint-plugin": "8.55.1-alpha.4",
+    "@typescript-eslint/parser": "8.55.1-alpha.4",
     "ajv": "8.18.0",
     "ajv-cli": "5.0.0",
     "eslint": "^10.0.0",
